--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -47,12 +47,12 @@
                 <tr>
                   <th style="width: 10%" scope="col">Client Name:</th>
                   <th style="width: 5%" scope="col">Client Phone: </th>
-                  <th style="width: 5%" scope="col">Clinet Fax: </th>
+                  <th style="width: 5%" scope="col">Client Fax: </th>
                   <th style="width: 12%" scope="col">Client Address 1: </th>
                   <th style="width: 12%" scope="col">Client Address 2: </th>
                   <th style="width: 12%" scope="col">Client Address 3:</th>
                   <th style="width: 12%" scope="col">Client Address 4: </th>
-                  <th style="width: 10%" scope="col">Clinet Email 1: </th>
+                  <th style="width: 10%" scope="col">Client Email 1: </th>
                   <th style="width: 10%" scope="col">Client Email 2: </th>
                   <th style="width: 12%" scope="col">Client Notes: </th>
                 </tr>
@@ -81,10 +81,6 @@
            <input class="btn btn-primary" type="submit" value="Submit">
          </form>
 
-       </div>
-     </div>
-       </main>
-
 
        <!-- BACK BUTTON -->
          <div class="form-row">
@@ -97,6 +93,10 @@
              }
            </script>
          </div>
+                </div>
+     </div>
+
+       </main>
       </main>
     </div>
     <footer class="c-footer">
