--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -23,80 +23,75 @@
       <% include partials/header %>
     </header>
     <div class="c-body">
-
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 mx-3">
           <form id="formAddClient" name="addClient" method="post" action="/addClient">
-
-            <div class="card w-auto">
-              <h3 class="card-header">Client Information</h3>
-              <div class="card-body">
+          <div class="card w-auto">
+            <h3 class="card-header">Client Information</h3>
+            <div class="card-body">
 
           <!-- Client Name & Agent Assignment-->
-          <div class="form-row">
-              <div class="form-group col-auto">
+            <div class="form-row">
+              <div class="form-group col-12 col-md-auto">
                 <label for="clientName">Client Name</label>
                 <input type="name" class="form-control" id="clientName" name="clientName" placeholder="Company Name" required>
               </div>
-              <div class="form-group col-auto">
-                <label for="agentName">Agent Assignment</label>
-                <select class="form-control" id="agentAbbrev" name="agentAbbrev" required>
-            		<%
-                  	var list = '<option value="" disabled selected>Select</option>';
-                  	for (i = 0; i < agentList.length; i++) {
-                  		list += '<option>' + agentList[i].agentAbbrev + '</option>';
-                  	}
-            		%>
-                	<%- list %>
-          	  </select>
-              </div>
-          </div>
+                <div class="form-group col-12 col-md-auto">
+                  <label for="agentName">Agent Assignment</label>
+                  <select class="form-control" id="agentAbbrev" name="agentAbbrev" required>
+              		<%
+                    	var list = '<option value="" disabled selected>Select</option>';
+                    	for (i = 0; i < agentList.length; i++) {
+                    		list += '<option>' + agentList[i].agentAbbrev + '</option>';
+                    	}
+              		%>
+                  	<%- list %>
+            	  </select>
+                </div>
+            </div>
 
           <!-- Client Contact Numbers-->
-          <div class="form-group">
-            <label for="clientPhone">Client Contact Numbers</label>
-              <div class="form-row">
-          			<div class="col-auto">
-          			  <input type="text" class="form-control" id="clientPhone" name="clientPhone" placeholder="Phone Number" required>
-          			</div>
-          			<div class="col-auto">
-          			  <input type="text" class="form-control" id="clientFax" name="clientFax" placeholder="Fax Number">
-          			</div>
-          	</div>
+          <div class="form-row">
+            <div class="form-group col-12 col-md-auto">
+              <label for="clientPhone">Client Contact Number</label>
+              <input type="text" class="form-control" id="clientPhone" name="clientPhone" placeholder="Phone Number" required>
+            </div>
+            <div class="form-group col-12 col-md-auto">
+              <label for="clientFax">Client Fax Number</label>
+              <input type="text" class="form-control" id="clientFax" name="clientFax" placeholder="Fax Number">
+            </div>
           </div>
 
           <!-- Client Addresses-->
-          <div class="form-group">
-
-            <label for="clientPhone">Client Addresses</label>
+            <label for="clientAddresses">Client Addresses</label>
               <div class="form-row">
-          			<div class="col-auto">
-          			  <textarea class="form-control" id="clientAddress1" name="clientAddress1" placeholder="Company Address 1" rows="3" required></textarea>
+          			<div class="form-group col-12 col-md-auto">
+          			  <textarea class="form-control mb-1" id="clientAddress1" name="clientAddress1" placeholder="Company Address 1" rows="3" required></textarea>
                   <select class="form-control" id="clientAddress1Type" name="clientAddress1Type" required>
                     <option value="" disabled selected>Select</option>
                     <option>Contact Address</option>
                     <option>Delivery Address</option>
                   </select>
                 </div>
-                <div class="col-auto">
-                  <textarea class="form-control" id="clientAddress2" name="clientAddress2" placeholder="Company Address 2 (if applicable)" rows="3"></textarea>
+                <div class="form-group col-12 col-md-auto">
+                  <textarea class="form-control mb-1" id="clientAddress2" name="clientAddress2" placeholder="Company Address 2 (if applicable)" rows="3"></textarea>
                     <select class="form-control" id="clientAddress2Type" name="clientAddress2Type">
                       <option></option>
                       <option>Contact Address</option>
                       <option>Delivery Address</option>
                   </select>
           			</div>
-          			<div class="col-auto">
-          			  <textarea class="form-control" id="clientAddress3" name="clientAddress3" placeholder="Company Address 3 (if applicable)" rows="3"></textarea>
+          			<div class="form-group col-12 col-md-auto">
+          			  <textarea class="form-control mb-1" id="clientAddress3" name="clientAddress3" placeholder="Company Address 3 (if applicable)" rows="3"></textarea>
                     <select class="form-control" id="clientAddress3Type" name="clientAddress3Type">
                       <option></option>
                       <option>Contact Address</option>
                       <option>Delivery Address</option>
                   </select>
           			</div>
-                <div class="col-auto">
-          			  <textarea class="form-control" id="clientAddress4" name="clientAddress4" placeholder="Company Address 4 (if applicable)" rows="3"></textarea>
+                <div class="form-group col-12 col-md-auto">
+          			  <textarea class="form-control mb-1" id="clientAddress4" name="clientAddress4" placeholder="Company Address 4 (if applicable)" rows="3"></textarea>
                     <select class="form-control" id="clientAddress4Type" name="clientAddress4Type">
                       <option></option>
                       <option>Contact Address</option>
@@ -104,45 +99,45 @@
                   </select>
           			</div>
           	</div>
-          </div>
+
 
           <!-- Client Email Address-->
-          <div class="form-group">
             <label for="inputAddress">Client Email Addresses</label>
-              <div class="form-row">
-          			<div class="col-auto">
+            <div class="form-row">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com" required>
           			</div>
-          			<div class="col-auto">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="email" class="form-control" id="clientEmail2" name="clientEmail2" placeholder="user2@email.com">
           			</div>
           	</div>
-          </div>
 
           <!-- Client Products-->
           <div class="form-group">
-            <label for="inputAddress">Client Products</label>
+            <label for="clientProducts">Client Products</label>
           	<div class="form-row">
-          		<div class="form-check form-check-inline">
-          		  <input class="form-check-input" type="checkbox" name="clientProdOX" value="true">
-          		  <label class="form-check-label" for="clientProdOX">OX</label>
-          		</div>
-          		<div class="form-check form-check-inline">
-          		  <input class="form-check-input" type="checkbox" name="clientProdPP" value="true">
-          		  <label class="form-check-label" for="clientProdPP">PP</label>
-          		</div>
-          		<div class="form-check form-check-inline">
-          		  <input class="form-check-input" type="checkbox" name="clientProdTP" value="true">
-          		  <label class="form-check-label" for="clientProdTP">TP</label>
-          		</div>
+              <div class="col-auto">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" name="clientProdOX" value="true">
+                  <label class="form-check-label" for="clientProdOX">OX</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" name="clientProdPP" value="true">
+                  <label class="form-check-label" for="clientProdPP">PP</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" name="clientProdTP" value="true">
+                  <label class="form-check-label" for="clientProdTP">TP</label>
+                </div>
+              </div>
           	</div>
           </div>
 
           <!-- Client Notes-->
           <div class="form-group">
-            <label for="inputAddress2">Client Notes</label>
+            <label for="clientNotes">Client Notes</label>
               <div class="form-row">
-          		<div class="col">
+          		<div class="form-group col-12 col-md-4">
           			<textarea class="form-control" name="clientNotes" rows="3" placeholder="Remarks"></textarea>
           		</div>
           	</div>
