--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -27,80 +27,73 @@
         <!-- Main content here -->
         <main class="main mt-2 mx-3">
           <form id="formAddContact" name="addContact" method="post" action="/addContact">
-          <div class="card  w-auto">
+          <div class="card w-auto">
             <h3 class="card-header">Contact Information</h3>
             <div class="card-body">
 
-          <div class="form-group">
+          <!-- Contact-Client Association-->
+            <div class="form-row">
+              <div class="form-group col-12 col-md-auto">
                 <label for="clientID">Client</label>
-                <select class="form-control" name="clientID" required>
-            		<%
-                  	var list = '<option value="" disabled selected>Select</option>';
-                  	for (i = 0; i < clientList.length; i++) {
-                  		list += '<option>' + clientList[i].clientName + '</option>';
-                  	}
-            		%>
-                	<%- list %>
-          	  </select>
-          </div>
-
-
+                  <select class="form-control" name="clientID" required>
+                  <%
+                      var list = '<option value="" disabled selected>Select</option>';
+                      for (i = 0; i < clientList.length; i++) {
+                        list += '<option>' + clientList[i].clientName + '</option>';
+                      }
+                  %>
+                    <%- list %>
+                  </select>
+              </div>
+            </div>
 
           <!-- Contact Name-->
-          <div class="form-group">
-            <label for="clientPhone">Contact Name</label>
+              <label for="contactName">Contact Name</label>
               <div class="form-row">
-          			<div class="col-auto">
-          			  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name" required>
-          			</div>
-          			<div class="col-auto">
-          			  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name" required>
-          			</div>
-          	</div>
-          </div>
+                <div class="form-group col-12 col-md-auto">
+                  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name" required>
+                </div>
+                <div class="form-group col-12 col-md-auto">
+                  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name" required>
+                </div>
+              </div>
 
           <!-- Contact Position-->
-          <div class="form-group">
-            <label for="clientPhone">Position</label>
+            <label for="contactPosition">Position</label>
               <div class="form-row">
-          			<div class="col-auto">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="contactPosition" name="contactPosition" placeholder="Position" required>
           			</div>
           	</div>
-          </div>
 
            <!-- Contact Numbers-->
-          <div class="form-group">
-            <label for="clientPhone">Contact Numbers</label>
+            <label for="contactPhone">Contact Numbers</label>
               <div class="form-row">
-          			<div class="col-auto">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Phone Number" required>
           			</div>
-          			<div class="col-auto">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="contactMobile" name="contactMobile" placeholder="Mobile Number">
           			</div>
           	</div>
-          </div>
 
           <!-- Contact Email Address-->
-          <div class="form-group">
             <label for="inputAddress">Email Address</label>
               <div class="form-row">
-          			<div class="col-auto">
+          			<div class="form-group col-12 col-md-auto">
           			  <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="user@email.com" required>
           			</div>
           	</div>
-          </div>
 
           <!-- Contact Notes-->
-          <div class="form-group">
-            <label for="inputAddress2">Notes</label>
+
+            <label for="contactNotes">Notes</label>
               <div class="form-row">
-          		<div class="col">
+          		<div class="form-group col-12 col-md-4">
           			<textarea class="form-control" name="contactNotes" rows="3" placeholder="Remarks"></textarea>
           		</div>
           	</div>
-          </div>
+
 
           <input class="btn btn-primary" type="submit" value="Submit">
           </form>
