--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar" data-class="c-sidebar-show">
+ <button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar" data-class="c-sidebar-show">
 <i class="cil-hamburger-menu"></i>
 </button>
 
@@ -13,8 +13,13 @@
   <li class="c-header-nav-item dropdown">
     <a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="cil-caret-bottom"></i></a>
     <div class="dropdown-menu dropdown-menu-right pt-2 pb-2">
-      <a class="dropdown-item" href="#"><strong>Username</strong></a>
-      <a class="dropdown-item" href="#">Settings</a>
+      <div class="dropdown-header bg-light py-2"><strong>NEW</strong></div>
+      <a class="dropdown-item" href="/entry-client"><i class="c-sidebar-nav-icon cil-briefcase"></i>Client</a>
+      <a class="dropdown-item" href="/entry-contact"><i class="c-sidebar-nav-icon cil-contact"></i>Contact</a>
+      <a class="dropdown-item" href="/entry-event"><i class="c-sidebar-nav-icon cil-calendar"></i>Event</a>
+      <div class="dropdown-header bg-light py-2"><strong>SETTINGS</strong></div>
+      <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-user"></i>Username  </a>
+      <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-settings"></i>Settings</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="#">Log Out</a>
     </div>
