--- a/CRM/views/report-activity.ejs
+++ b/CRM/views/report-activity.ejs
@@ -33,11 +33,11 @@
 
       <!-- Select Date Range for Data -->
             <div class="form-row">
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
@@ -45,7 +45,7 @@
 
     <!-- Select Agent from Prepopulated list of options -->
             <div class="form-row">
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="agentSelect">Agent</label>
                 <select class="form-control" name="agentSelect" id="agentSelect" required>
                   <%
@@ -61,7 +61,7 @@
 
     <!-- Submit Button to execute -->
             <div class="form-row">
-              <div class="form-group">
+              <div class="form-group col-auto">
                 <input class="btn btn-primary" type="submit" value="Submit">
                 </form>
               </div>
