--- a/CRM/views/report-client-history.ejs
+++ b/CRM/views/report-client-history.ejs
@@ -33,7 +33,7 @@
 
       <!-- Select Agent from Prepopulated list of options -->
                 <div class="form-row">
-                  <div class="form-group col-12">
+                  <div class="form-group col-auto">
                       <label for="agentSelect">Client</label>
                         <select class="form-control" name="agentSelect" id="agentSelect" onChange="changeAgent(this.value);" required>
                           <%
@@ -51,11 +51,11 @@
 
       <!-- Select Date Range for Data -->
             <div class="form-row">
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
