--- a/CRM/views/report-client-list.ejs
+++ b/CRM/views/report-client-list.ejs
@@ -33,7 +33,7 @@
 
           <!-- Select Agent from Prepopulated list of options -->
                   <div class="form-row">
-                    <div class="form-group col-6">
+                    <div class="form-group col-auto">
                       <label for="agentSelect">Agent</label>
                       <select class="form-control" name ="agentAbbrev" id="agentAbbrev" required>
                         <%
