--- a/CRM/views/report-visit-count.ejs
+++ b/CRM/views/report-visit-count.ejs
@@ -32,11 +32,11 @@
               <div class="card-body">
     <!-- Select Date Range for Data -->
             <div class="form-row">
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="inputDateStart">Date Start</label>
                 <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="inputDateEnd">Date End</label>
                 <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
@@ -44,7 +44,7 @@
 
     <!-- Select Agent from Prepopulated list of options -->
             <div class="form-row">
-              <div class="form-group col-6">
+              <div class="form-group col-auto">
                 <label for="agentSelect">Agent</label>
                 <select class="form-control" id="agentSelect" name="agentSelect" required>
                   <%
