Fixed Username on Header

--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -49,7 +49,7 @@ TESTING
           <a class="dropdown-item" href="/entry-client">Client</a>
           <a class="dropdown-item" href="/entry-contact">Contact</a>
           <a class="dropdown-item" href="/entry-event">Event</a>
-          <a class="dropdown-item" href="/entry-agent">Agent</a>
+          <a class="dropdown-item" href="/entry-user">User</a>
     </div>
   </li>
   <li class="c-header-nav-item dropdown">
@@ -65,7 +65,7 @@ TESTING
   </li>
   <li class="c-header-nav-item dropdown">
     <a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button" ariahaspopup="true" aria-expanded="false">
-      <button type="button" class="btn btn-light">USERNAME</button>
+      <button type="button" class="btn btn-light"> <%- user.username %> </button>
     </a>
     <div class="dropdown-menu dropdown-menu-right pt-0">
       <a class="dropdown-item" href="#"> Settings</a>
