--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -18,7 +18,7 @@
       <a class="dropdown-item" href="/entry-contact"><i class="c-sidebar-nav-icon cil-contact"></i>Contact</a>
       <a class="dropdown-item" href="/entry-event"><i class="c-sidebar-nav-icon cil-calendar"></i>Event</a>
       <div class="dropdown-header bg-light py-2"><strong>SETTINGS</strong></div>
-      <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-user"></i>Username  </a>
+      <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-user"></i><%- user.username %></a>
       <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-settings"></i>Settings</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="#">Log Out</a>
