--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -21,7 +21,7 @@
       <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-user"></i><%- user.username %></a>
       <a class="dropdown-item" href="#"><i class="c-sidebar-nav-icon cil-settings"></i>Settings</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Log Out</a>
+      <a class="dropdown-item" href="/logout">Log Out</a>
     </div>
   </li>
 </ul>
@@ -69,7 +69,7 @@ TESTING
     </a>
     <div class="dropdown-menu dropdown-menu-right pt-0">
       <a class="dropdown-item" href="#"> Settings</a>
-      <a class="dropdown-item" href="#"> Log Out</a>
+      <a class="dropdown-item" href="/logout"> Log Out</a>
     </div>
   </li>
 </ul>
